# dennou

./: .gitignore  LICENSE  README.md  app.py  config.yaml.example  main.py  pyproject.toml
core/: collectors.py
dennou/: __init__.py  gpu.py  server.py
src/: __main__.py  config.py  gpu.py  server.py  ssh.py  system.py  tmux.py
web/: index.html
