[project]
name = "dennou"
version = "0.1.0"
description = "電脳 — SSH-based GPU, system, and tmux monitoring dashboard"
requires-python = ">=3.12"
dependencies = [
    "asyncssh>=2.22.0",
    "fastapi>=0.135.3",
    "pyyaml>=6.0.3",
    "uvicorn>=0.43.0",
    "websockets>=16.0",
]

[tool.setuptools.package-dir]
dennou = "src"

[project.scripts]
dennou = "dennou.__main__:main"
